# devcontainer-python3.12

./: .gitignore  README.md  note-day1.md  note-day2.md  project-README.md
.github/chatmodes/: Plan.chatmode.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/routes/: detection.py  health.py  upload.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/ui/: button.jsx  toaster.jsx
frontend/src/lib/: api.js
frontend/src/pages/: HomePage.jsx  UploadPage.jsx
